feat(cmake): Add installation target to system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.10)
 project( BosonUSB )
-include_directories( ${MY_SOURCE_DIR}/src )
+include_directories(${PROJECT_SOURCE_DIR})
 find_package( OpenCV REQUIRED )
 add_executable( BosonUSB BosonUSB.cpp )
 target_link_libraries( BosonUSB ${OpenCV_LIBS} )
 
+install (TARGETS BosonUSB RUNTIME DESTINATION bin)
